crates/analyzer/tests/snapshots/errors__invalid_impl_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `impl` blocks aren't allowed for Map<u8, u8>
  ┌─ compile_errors/invalid_impl_type.fe:3:1
  │
3 │ impl SomeTrait for Map<u8, u8> {}
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ illegal `impl` block


